apps/base/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio
  name: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  strategy: {}
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: ghcr.io/xdaryamo/portfolio:2.4.0
        name: portfolio
        ports:
            - containerPort: 4321
