apps/base/portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: portfolio
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - dariomazza.net             
      secretName: portfolio-prod-tls
  rules:
  - host: dariomazza.net
    http:
      paths:
      - backend:
          service:
            name: portfolio
            port:
              number: 80
        path: /
        pathType: Prefix
